Theme dressing and adaptation operations were performed.

--- a/KusysProject/Views/Shared/_Header.cshtml
+++ b/KusysProject/Views/Shared/_Header.cshtml
@@ -4,8 +4,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
-                    <h1 class="text-white pt-3 mt-n5">Material Kit 2</h1>
-                    <p class="lead text-white mt-3">Free & Open Source Web UI Kit built over Bootstrap 5. <br /> Join over 1.6 million developers around the world. </p>
+                    <h1 class="text-white pt-3 mt-n5">
+                        KUSYS - DEMO Project
+                    </h1>
+                    <p class="lead text-white mt-3">
+                        @*It is a mini Student and course project developed in enterprise architecture with .Net Core 6.*@
+                        It is a mini student and course project developed in enterprise architecture with .Net Core 6.
+                        Records created with dummy content are provided with MYSQL and Code First technology.
+                    </p>
                 </div>
             </div>
         </div>
