The theme is fragmented.

--- a/KusysProject/Views/Shared/_HeaderNav.cshtml
+++ b/KusysProject/Views/Shared/_HeaderNav.cshtml
@@ -3,7 +3,7 @@
         <div class="col-12">
             <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                 <div class="container-fluid px-0">
-                    <a class="navbar-brand font-weight-bolder ms-sm-3" href="https://demos.creative-tim.com/material-kit/index" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+                    <a class="navbar-brand font-weight-bolder ms-sm-3" asp-action="Index" asp-controller="Home" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
                         KUSYS DEMO
                     </a>
                     <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,30 +15,30 @@
                     </button>
                     <div class="collapse navbar-collapse pt-3 pb-2 py-lg-0 w-100" id="navigation">
                         <ul class="navbar-nav navbar-nav-hover ms-auto">
-                            
+
                             <!-- Student -->
                             <li class="nav-item dropdown dropdown-hover mx-2">
                                 <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="material-icons opacity-6 me-2 text-md">dashboard</i>
                                     Student Affairs
-                                    <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
+                                    <img src="~/assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-xl mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
                                     <div class="d-none d-lg-block">
                                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
                                             STUDENT
                                         </h6>
-                                        <a href="./pages/about-us.html" class="dropdown-item border-radius-md">
+                                        <a asp-action="Index" asp-controller="Student" class="dropdown-item border-radius-md">
                                             <span>List</span>
                                         </a>
-                                        <a href="./pages/contact-us.html" class="dropdown-item border-radius-md">
+                                        <a asp-action="Create" asp-controller="Student" class="dropdown-item border-radius-md">
                                             <span>Create</span>
                                         </a>
                                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
                                             COURSE
                                         </h6>
 
-                                        <a href="./pages/sign-in.html" class="dropdown-item border-radius-md">
+                                        <a asp-action="Create" asp-controller="StudentCourseMap" class="dropdown-item border-radius-md">
                                             <span>Course Assignment</span>
                                         </a>
                                     </div>
@@ -48,17 +48,17 @@
                                             STUDENT AFFAIRS
                                         </h6>
 
-                                        <a href="./pages/about-us.html" class="dropdown-item border-radius-md">
+                                        <a href="~/pages/about-us.html" class="dropdown-item border-radius-md">
                                             <span>List</span>
                                         </a>
-                                        <a href="./pages/contact-us.html" class="dropdown-item border-radius-md">
+                                        <a href="~/pages/contact-us.html" class="dropdown-item border-radius-md">
                                             <span>Create</span>
                                         </a>
 
                                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
                                             COURSE
                                         </h6>
-                                        <a href="./pages/sign-in.html" class="dropdown-item border-radius-md">
+                                        <a asp-action="Create" asp-controller="StudentCourseMap" class="dropdown-item border-radius-md">
                                             <span>Course Assignment</span>
                                         </a>
 
@@ -72,19 +72,19 @@
                                 <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="material-icons opacity-6 me-2 text-md">article</i>
                                     Course Procedures
-                                    <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
+                                    <img src="~/assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive mt-0 mt-lg-3 p-3 border-radius-lg" aria-labelledby="dropdownMenuDocs">
                                     <div class="d-none d-lg-block">
                                         <ul class="list-group">
                                             <li class="nav-item list-group-item border-0 p-0">
-                                                <a class="dropdown-item py-2 ps-3 border-radius-md" href=" https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit ">
+                                                <a asp-action="Index" asp-controller="Course" class="dropdown-item py-2 ps-3 border-radius-md">
                                                     <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">List</h6>
                                                     <span class="text-sm">You can list related courses here</span>
                                                 </a>
                                             </li>
                                             <li class="nav-item list-group-item border-0 p-0">
-                                                <a class="dropdown-item py-2 ps-3 border-radius-md" href=" https://www.creative-tim.com/learning-lab/bootstrap/colors/material-kit ">
+                                                <a asp-action="Create" asp-controller="Course" class="dropdown-item py-2 ps-3 border-radius-md">
                                                     <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Create</h6>
                                                     <span class="text-sm">You can add related courses here</span>
                                                 </a>
@@ -94,17 +94,15 @@
 
                                     <div class="row d-lg-none">
                                         <div class="col-md-12 g-0">
-                                            <a class="dropdown-item py-2 ps-3 border-radius-md" href="./pages/about-us.html">
+                                            <a asp-action="Index" asp-controller="Course" class="dropdown-item py-2 ps-3 border-radius-md">
                                                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">List</h6>
                                                 <span class="text-sm">All about overview, quick start, license and contents</span>
                                             </a>
 
-                                            <a class="dropdown-item py-2 ps-3 border-radius-md" href="./pages/about-us.html">
+                                            <a asp-action="Create" asp-controller="Course" class="dropdown-item py-2 ps-3 border-radius-md">
                                                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Create</h6>
                                                 <span class="text-sm">You can list related courses here</span>
                                             </a>
-
-
                                         </div>
                                     </div>
 
@@ -121,7 +119,7 @@
 
                             <!-- Button -->
                             <li class="nav-item my-auto ms-3 ms-lg-0">
-                                <a href="https://www.creative-tim.com/product/material-kit-pro" class="btn btn-sm  bg-gradient-primary mb-0 me-1 mt-2 mt-md-0">
+                                <a asp-action="Index" asp-controller="StudentCourseMap" class="btn btn-sm  bg-gradient-primary mb-0 me-1 mt-2 mt-md-0">
                                     Course List of Students
                                 </a>
                             </li>
