--- a/KusysProject/Views/_ViewImports.cshtml
+++ b/KusysProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using KusysProject
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using KusysProject
 @using KusysProject.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using KUSYS_Demo.Models
