Layers have been renamed.

--- a/KusysProject/Views/StudentCourseMap/Create.cshtml
+++ b/KusysProject/Views/StudentCourseMap/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model KUSYS_Demo.Models.StudentCourseMap.StudentCourseMapListModel
+﻿@model KUSYSDemo.Models.StudentCourseMap.StudentCourseMapListModel
 @{
     ViewData["Title"] = "Student Course Assignment";
 }
