--- a/KusysProject/Views/StudentCourseMap/Index.cshtml
+++ b/KusysProject/Views/StudentCourseMap/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<KUSYS_Demo.Models.StudentCourseMap.StudentCourseMapListModel>
+﻿@model List<KUSYSDemo.Models.StudentCourseMap.StudentCourseMapListModel>
 @{
     ViewData["Title"] = " List of Students' Courses";
 }
