--- a/KusysProject/Views/_ViewImports.cshtml
+++ b/KusysProject/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using KusysProject
 @using KusysProject.Models
-@using KUSYS_Demo.Models
+@using KUSYSDemo.Models
